# rust_game_engine

./: .gitignore  Cargo.toml  README.txt  build.rs  workspace.code-workspace
MyLibrary/: Cargo.toml
MyLibrary/src/: lib.rs
SparkEngine/: Cargo.toml  project_build.bat  project_build_and_run.bat  project_build_release.bat
SparkEngine/src/: main.rs
SparkEngine/src/TinyRenderer/: lesson_0.rs
SparkyEngine/: Cargo.toml
SparkyEngine/src/: main.rs  main_sdl.rs
assets/config/spritemaps/: custom_spaceships.yml  kennynl.yml
assets/shaders/: 2d_instanced.frag  2d_instanced.vert  light.vert  lit_multiple_lights_no_tex.frag  lit_point_atten.vert  triangle.frag
lib/TinyRenderer/: lesson_0.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/render_gl_derive/: Cargo.toml
mylibs/SparkEngineLibrary/: Cargo.toml
mylibs/SparkEngineLibrary/src/: lib.rs
mylibs/SparkEngineLibrary/src/shaders/: main - Copy.rs
mylibs/spark_engine/: Cargo.toml
mylibs/spark_engine/src/: lib.rs
mylibs/spark_engine/src/engine/layers/: mod.rs
mylibs/spark_engine/src/engine/renderer/: mod.rs  renderer2d.rs
mylibs/spark_engine/src/engine/shaders/: mod.rs
old/: io.rs  profiler.rs
old/game/: click_to_destroy.cpp  collisions_actor_actor.cpp  collisions_actor_actor.hpp  components.hpp  create_entities.cpp  create_entities.hpp  cursor.cpp  cycle_sprite.cpp  cycle_sprite.hpp  destroy_after_time.cpp  destroy_after_time.hpp  grid.hpp  input.hpp  old_boost.hpp  physics_layers.hpp  player_input.cpp  player_input.hpp  player_jump.cpp  player_jump.hpp  player_move_on_grid.cpp  player_move_on_grid.hpp  tile_types.hpp
old/lighting/: system.cpp  system.hpp
old/opengl/: gl_buffer.rs  mod.rs  shader.rs  texture.rs  viewport.rs
old/physics/: process_move_objects.cpp  system.cpp
old/renderer/: components.hpp  system.cpp
old/renderer/helpers/: batch_quad.cpp  batch_quad.hpp  helpers.cpp
old/sprites/: components.hpp  helpers.cpp  helpers.hpp  system.cpp  system.hpp
sandbox/: Cargo.toml
src/: game_window.rs  gui.rs  main.rs  renderer.rs  resources.rs
src/application/: game_window.rs  input.rs  mod.rs
src/data/: materials.rs
src/data/shaders/: triangle.frag  triangle.vert
src/game/: game_state.rs  mod.rs
src/opengl/: texture.rs
src/renderer/: data.rs  shader.rs
src/renderer_gl/: mod.rs  shader.rs  shader_manager.rs  viewport.rs
src/threed/: camera.rs  mesh.rs  mod.rs  model.rs  textures.rs
src/util/: mod.rs  profiling.rs  resources.rs
