[package]
name = "main_project"
version = "0.1.0"
authors = ["m-p-b <m-p-b@hotmail.co.uk>"]
license = "MIT"

[[bin]]
name = "SparkEngine"
path = "src/main.rs"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["bundled", "static-link"]

[dependencies]
gl = { path = "lib/gl" }
render_gl_derive = {path = "lib/render_gl_derive"}
imgui = "0.4.0"
imgui-sdl2 = "0.11.0"
imgui-opengl-renderer = "0.8"
failure = "*"
vec-2-10-10-10 = "0.1.2"
half = "1.1.1"
nalgebra = "0.18"
cgmath = "*"
c_string = "*"
rand = "*"
tobj = "2.0.2"
image = "*"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]

