[package]
name = "main_project"
version = "0.1.0"
authors = ["m-p-b <m-p-b@hotmail.co.uk>"]
license = "MIT"

[[bin]]
name = "SparkEngine"
path = "src/main.rs"

[dependencies.sdl2]
version = "0.35"
default-features = false
# note, the features "image", "mixer" does not work with the "bundled" feature
features = ["bundled", "static-link"]

[dependencies]
gl = { path = "lib/gl" }
image = "*"
imgui = "0.8.2"
imgui-sdl2 = "0.15.0"
imgui-opengl-renderer = "0.11.1"
# failure = "*"
# vec-2-10-10-10 = "0.1.2"
# half = "1.1.1"
# nalgebra = "0.18"
# cgmath = "*"
# c_string = "*"
# rand = "*"

[build-dependencies]
walkdir = "2.1"

